--- a/api/about/models/about.settings.json
+++ b/api/about/models/about.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "abouts",
   "info": {
-    "name": "about"
+    "name": "about",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -10,9 +11,12 @@
     "draftAndPublish": true
   },
   "attributes": {
-    "about": {
+    "small_text": {
       "type": "text",
       "default": "Here you Can write the about data"
+    },
+    "big_text": {
+      "type": "text"
     }
   }
 }
